src/test/resources/purescript_examples/failing/Reserved.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeDeclaration)
        PsiElement(()('(')
        PureASTWrapperElement(Identifier)
          PsiElement(operator)('<')
        PsiElement())(')')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PsiElement(proper name)('Number')
            PsiElement(whitespace)(' ')
          PsiElement(->)('->')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PsiElement(proper name)('Number')
              PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Type)
              PureASTWrapperElement(TypeAtom)
                PsiElement(proper name)('Number')
                PsiElement(whitespace)('\n')
      PsiElement(()('(')
      PureASTWrapperElement(Identifier)
        PsiElement(operator)('<')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Binder)
        PureASTWrapperElement(VarBinder)
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
      PureASTWrapperElement(Binder)
        PureASTWrapperElement(VarBinder)
          PsiElement(identifier)('b')
          PsiElement(whitespace)(' ')
      PsiElement(=)('=')
      PsiElement(whitespace)(' ')
      PsiErrorElement:Expecting Value
        PsiElement(operator)('!')
        PsiElement(()('(')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('>=')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('b')
        PsiElement())(')')
        PsiElement(whitespace)('\n')
